@@ -1,3 +1,7 @@
+2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* POTFILES.in: recreate after last gettexttize.
+
 2018-03-17  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.19.8.1.
