@@ -1,5 +1,6 @@
 2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* utils/recutl.c (recutl_print_version): Update copyright years.
 	* bash/readrec.c: Include config.h.
 	* bash/Makefile.am (COMMON_CPPFLAGS): Include the builddir lib.
 	* src/rec-sex-tab.y: Use new form of %name-prefix.
